force-app/main/default/objects/Product2/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Carrier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>