force-app/main/default/objects/Product2/fields/DeliveryPostalCode__c.field-meta.xml
<CustomField>
    <fullName>DeliveryPostalCode__c</fullName>
    <formula>Destination_Location__r.Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Postal Code</label>
    <type>Text</type>
</CustomField>