force-app/main/default/objects/Product2/fields/Destination_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Destination_Country_Code__c</fullName>
    <formula>Destination_Location__r.Country_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Country Code</label>
    <type>Text</type>
</CustomField>