force-app/main/default/objects/Product2/fields/Destination_Location__c.field-meta.xml
<CustomField>
    <fullName>Destination_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location__c.Type__c</field>
            <operation>equals</operation>
            <value>Delivery</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Products (Destination Location)</relationshipLabel>
    <relationshipName>Destinations</relationshipName>
    <type>Lookup</type>
</CustomField>