force-app/main/default/objects/Product2/fields/LoadingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>LoadingPostalCode__c</fullName>
    <formula>Loading_Location__r.Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loading Postal Code</label>
    <type>Text</type>
</CustomField>