force-app/main/default/objects/Product2/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tender</fullName>
            </value>
            <value>
                <fullName>Spot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>